--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,15 @@
 name: pubgapi
-description: A starting point for Dart libraries or applications.
+description: A Playerunknown's Battleground API wrapper for Dart!
 version: 0.0.1
-#homepage: https://www.example.com
-#author: Your Name <email@example.com>
+author: Gacnt <https://github.com/Gacnt>
+homepage: https://github.com/Gacnt/Dart-PUBGAPI
 
 environment:
   sdk: '>=1.20.1 <=2.0.0-dev.52.0'
 
 dependencies:
-#  path: ^1.4.1
+  http: ^0.11.3+16
+  json_annotation: ^0.2.3
 
 dev_dependencies:
   json_serializable: ^0.5.0
