--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: pubgapi
 description: A Playerunknown's Battleground API wrapper for Dart!
-version: 0.0.1
+version: 0.0.3
 author: Gacnt <https://github.com/Gacnt>
 homepage: https://github.com/Gacnt/Dart-PUBGAPI
 
 environment:
-  sdk: '>=1.20.1 <=2.0.0-dev.48.0' 
+  sdk: '>=1.20.1 <=2.0.0' 
 
 dependencies:
   http: ^0.11.3+16
@@ -14,4 +14,4 @@ dependencies:
 dev_dependencies:
   json_serializable: ^0.5.0
   test: ^0.12.0
-  build_runner: ^0.8.8
+  build_runner: ^0.8.8 
